--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,23 @@
 {
-  "require": {
-    "slim/slim": "4.*",
-    "twig/twig": "^2.6",
-    "monolog/monolog": "^1.23",
-    "slim/twig-view": "^3.0",
-    "robmorgan/phinx": "^0.11"
-  },
-  "require-dev": {
-    "deployer/recipes": "^6.2"
-  }
+    "name": "jimwins/talapoin",
+    "description": "Talapoin is a small blogging/CMS system, used on trainedmonkey.com",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Jim Winstead",
+            "email": "jimw@trainedmonkey.com"
+        }
+    ],
+    "require": {
+        "slim/slim": "4.*",
+        "twig/twig": "^3.3",
+        "twig/html-extra": "^3.3",
+        "slim/twig-view": "^3.3",
+        "slim/psr7": "^1.0",
+        "middlewares/trailing-slash": "^2.0",
+        "php-di/php-di": "^6.1",
+        "slim/http": "^1.0",
+        "php-di/slim-bridge": "^3.0",
+        "robmorgan/phinx": "^0.12.10"
+    }
 }
