--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php-di/php-di": "^6.1",
         "slim/http": "^1.0",
         "php-di/slim-bridge": "^3.0",
-        "robmorgan/phinx": "^0.12.10"
+        "robmorgan/phinx": "^0.12.10",
+        "symfony/yaml": "^6.1"
     }
 }
