--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "email": "jimw@trainedmonkey.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+          "Talapoin\\" : "lib/Talapoin/"
+        }
+    },
     "require": {
         "slim/slim": "4.*",
         "twig/twig": "^3.3",
@@ -19,6 +24,7 @@
         "slim/http": "^1.0",
         "php-di/slim-bridge": "^3.0",
         "robmorgan/phinx": "^0.12.10",
-        "symfony/yaml": "^6.1"
+        "symfony/yaml": "^6.1",
+        "jimwins/titi": "^0.0"
     }
 }
