--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php-di/slim-bridge": "^3.0",
         "robmorgan/phinx": "^0.12.10",
         "symfony/yaml": "^6.1",
-        "jimwins/titi": "^0.0"
+        "jimwins/titi": "^0.0",
+        "fundevogel/php-mastodon": "^0.6.0"
     }
 }
