--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/yaml": "^6.1",
         "jimwins/titi": "^0.0",
         "fundevogel/php-mastodon": "^0.6.0",
-        "jimwins/akismet-api": "@dev"
+        "jimwins/akismet-api": "@dev",
+        "wildbit/postmark-php": "^4.0"
     }
 }
