--- a/phinx.yml
+++ b/phinx.yml
@@ -2,6 +2,9 @@ paths:
     migrations: '%%PHINX_CONFIG_DIR%%/db/migrations'
     seeds: '%%PHINX_CONFIG_DIR%%/db/seeds'
 
+templates:
+    file: 'db/templates/migration.php'
+
 environments:
     default_migration_table: phinxlog
     default_database: db
