--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "wildbit/postmark-php": "^4.0",
         "ezyang/htmlpurifier": "^4.16",
         "vazaha-nl/mastodon-api-client": "^1.0",
-        "indieweb/mention-client": "^1.2"
+        "indieweb/mention-client": "^1.2",
+        "srwiez/thumbhash": "^1.2"
     }
 }
