--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
         "vazaha-nl/mastodon-api-client": "^1.0",
         "indieweb/mention-client": "^1.2",
         "srwiez/thumbhash": "^1.2"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.8"
     }
 }
