--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "ezyang/htmlpurifier": "^4.16",
         "vazaha-nl/mastodon-api-client": "^1.0",
         "indieweb/mention-client": "^1.2",
-        "srwiez/thumbhash": "^1.2"
+        "srwiez/thumbhash": "^1.2",
+        "robinvdvleuten/ulid": "^5.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
