--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "vazaha-nl/mastodon-api-client": "^1.0",
         "indieweb/mention-client": "^1.2",
         "srwiez/thumbhash": "^1.2",
-        "robinvdvleuten/ulid": "^5.0"
+        "robinvdvleuten/ulid": "^5.0",
+        "tarikozket/backblaze-b2-sdk-php": "dev-master",
+        "aws/aws-sdk-php": "^3.298"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
