--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,15 @@
         "srwiez/thumbhash": "^1.2",
         "robinvdvleuten/ulid": "^5.0",
         "tarikozket/backblaze-b2-sdk-php": "dev-master",
-        "aws/aws-sdk-php": "^3.298"
+        "aws/aws-sdk-php": "^3.298",
+        "elasticsearch/elasticsearch": "^8.12"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
