Add requirement for mf2/mf2 and recommended html5 parser

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
         "robinvdvleuten/ulid": "^5.0",
         "tarikozket/backblaze-b2-sdk-php": "dev-master",
         "aws/aws-sdk-php": "^3.298",
-        "elasticsearch/elasticsearch": "^8.12"
+        "elasticsearch/elasticsearch": "^8.12",
+        "mf2/mf2": "^0.5.0",
+        "masterminds/html5": "^2.8"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
