--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,10 @@
         "elasticsearch/elasticsearch": "^8.12",
         "mf2/mf2": "^0.5.0",
         "masterminds/html5": "^2.8",
-        "cjrasmussen/bluesky-api": "^2.0"
+        "cjrasmussen/bluesky-api": "^2.0",
+        "meilisearch/meilisearch-php": "^1.6",
+        "guzzlehttp/guzzle": "^7.7",
+        "http-interop/http-factory-guzzle": "^1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8"
