--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "http-interop/http-factory-guzzle": "^1.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.8"
+        "squizlabs/php_codesniffer": "^3.8",
+        "phpstan/phpstan": "^1.10"
     },
     "config": {
         "allow-plugins": {
