--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
         "cjrasmussen/bluesky-api": "^2.0",
         "meilisearch/meilisearch-php": "^1.6",
         "guzzlehttp/guzzle": "^7.7",
-        "http-interop/http-factory-guzzle": "^1.0"
+        "http-interop/http-factory-guzzle": "^1.0",
+        "erusev/parsedown": "^1.7",
+        "twig/markdown-extra": "^3.8"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8",
