Add a Makefile to run development version, and some more docs

--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,7 @@
+# See https://tailscale.com/kb/1085/auth-keys for how to generate this key
 TS_AUTHKEY="tskey-client-{something}?ephemeral=false"
 TS_EXTRA_ARGS="--advertise-tags=tag:container --reset"
+# You can do what you want with these
 MYSQL_ROOT_PASSWORD="whatever-you-want"
 MYSQL_DATABASE="database"
 MYSQL_USER="user"
