--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ app = 'talapoin'
 primary_region = 'den'
 
 [build]
+  dockerfile = "Dockerfile.fly"
 
 [http_service]
   internal_port = 8080
@@ -21,3 +22,7 @@ primary_region = 'den'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[mounts]
+  source = "litefs"
+  destination = "/app/db"
