--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for talapoin on 2025-03-15T17:18:35Z
+# fly.toml app configuration file generated for talapoin on 2025-03-15T16:30:03-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -7,7 +7,11 @@ app = 'talapoin'
 primary_region = 'den'
 
 [build]
-  dockerfile = "Dockerfile.fly"
+  dockerfile = 'Dockerfile.fly'
+
+[[mounts]]
+  source = 'litefs'
+  destination = '/var/lib/litefs'
 
 [http_service]
   internal_port = 8080
@@ -22,7 +26,3 @@ primary_region = 'den'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
-
-[mounts]
-  source = "litefs"
-  destination = "/app/db"
