deploy: Need sqlite3 for LiteFS, too

--- a/Dockerfile.fly
+++ b/Dockerfile.fly
@@ -27,6 +27,6 @@ RUN composer install \
         --optimize-autoloader --classmap-authoritative
 
 # Use LiteFS
-RUN apt-get update -y && apt-get install -y ca-certificates fuse3
+RUN apt-get update -y && apt-get install -y ca-certificates fuse3 sqlite3
 COPY --from=flyio/litefs:0.5 /usr/local/bin/litefs /usr/local/bin/litefs
 ENTRYPOINT litefs mount
