chore: Downgrade aws-sdk-php for B2

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "srwiez/thumbhash": "^1.2",
         "robinvdvleuten/ulid": "^5.0",
         "tarikozket/backblaze-b2-sdk-php": "dev-master",
-        "aws/aws-sdk-php": "^3.298",
+        "aws/aws-sdk-php": "3.336.15",
         "masterminds/html5": "^2.8",
         "cjrasmussen/bluesky-api": "^2.0",
         "meilisearch/meilisearch-php": "^1.6",
