--- a/Dockerfile.fly
+++ b/Dockerfile.fly
@@ -18,6 +18,8 @@ WORKDIR /app
 
 COPY . /app
 
+COPY config/php/*.ini /usr/local/etc/php/conf.d
+
 RUN curl -sS https://getcomposer.org/installer | php \
         && mv composer.phar /usr/local/bin/ \
         && ln -s /usr/local/bin/composer.phar /usr/local/bin/composer
